feat(governance): Phase 8A — unified HITL queue, pricing escalation, metric
Backend foundation for the HITL Governance Console. The supervisor could only
ever see half the picture: ProcurementApproval (B2B overrides) was exposed at
/api/governance/hitl, while HitlQueue (agent escalations from
MasterOrchestratorService) had no resolution path at all.

- Unify both queues at read time into one HitlItem view (source + composite id
  PA-<id> / AQ-<ticketId>), served by GET /api/governance/hitl. approve/reject
  now take the composite id and route back to the correct source via
  resolveHitlItem (HitlQueuePort + ProcurementApprovalPort), keeping the ADMIN
  guard and idempotency (TicketAlreadyResolvedException → 409). Agent
  escalations are now resolvable (approved / voided).
- PricingGuardrailsEngine flags aggressive but in-range recommendations for
  review (surge > 2.5x or discount > 15%); DynamicPricingAgent files a
  best-effort 'pricing_review' ticket to the HITL queue while still returning
  the clamped, safe recommendation.
- V28 widens the oltp.hitl_queue type CHECK to include 'agent_escalation'
  (a latent constraint violation on PostgreSQL — H2 dev masked it) and the new
  'pricing_review'.
- New hitl.pending.count gauge + Grafana panel (Mission Control AI row) so the
  supervisor backlog is visible alongside the Epic 2 metrics.

Tests: new HitlUnifiedQueueTest (merge + composite-id routing + idempotency) and
PricingGuardrailsReviewTest (thresholds); HitlQueueControllerTest /
SecurityHardeningIntegrationTest updated to the unified contract (ADMIN-only,
CUSTOMER 403, double-resolve 409). Full suite: 302 passing.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>