@@ -1,7 +1,7 @@
 package ch.swissqcommerce.backend.controller;
 
 import ch.swissqcommerce.backend.domain.governance.adapter.in.web.HitlQueueController;
-import ch.swissqcommerce.backend.domain.governance.core.model.ProcurementApproval;
+import ch.swissqcommerce.backend.domain.governance.core.model.HitlItem;
 import ch.swissqcommerce.backend.domain.governance.port.in.GovernanceUseCase;
 import ch.swissqcommerce.backend.exception.TicketAlreadyResolvedException;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -21,8 +21,9 @@ import org.springframework.test.web.servlet.MockMvc;
 
 import java.math.BigDecimal;
 import java.util.Arrays;
+import java.util.List;
 
-import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.never;
@@ -34,23 +35,18 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 /**
- * Web-layer security tests for {@link HitlQueueController}.
+ * Web-layer security tests for {@link HitlQueueController} (Phase 8 unified queue).
  *
  * <p>Guards the privilege-escalation hole where any authenticated principal —
  * e.g. a {@code ROLE_CUSTOMER} JWT — could approve or reject human-in-the-loop
- * governance tickets (including B2B procurement overrides) because the handlers
- * lacked {@code @PreAuthorize}. Every handler now requires {@code ROLE_ADMIN}.
+ * governance items because the handlers lacked {@code @PreAuthorize}. Every handler
+ * requires {@code ROLE_ADMIN}. The unified endpoints serve {@link HitlItem}s and
+ * resolve by composite id via {@code resolveHitlItem}.
  *
- * <p>The prior version of this test set {@code addFilters = false} on a
- * {@code @WebMvcTest} slice and never authenticated, so {@code @PreAuthorize} was
- * never evaluated — it would have passed even with the annotations removed. We use
- * a full {@code @SpringBootTest} context here so the app's real
- * {@code @EnableMethodSecurity} genuinely enforces the guard (a method-security
- * slice drops the proxied controller's request mappings, yielding spurious 404s).
- * {@code GovernanceUseCase} is mocked to keep this a focused web-layer test;
- * filters are disabled so we drive the role via a manually-set {@code SecurityContext}
- * and exercise the controller's own {@code @PreAuthorize} in isolation. The 403 on
- * denial and 409 on a double-approve are produced by {@code GlobalExceptionHandler}.
+ * <p>Full {@code @SpringBootTest} context so the app's real
+ * {@code @EnableMethodSecurity} genuinely enforces the guard; filters are disabled
+ * so we drive the role via a manually-set {@code SecurityContext}. The 403 on
+ * denial and 409 on a double-resolve are produced by {@code GlobalExceptionHandler}.
  */
 @SpringBootTest
 @AutoConfigureMockMvc(addFilters = false)
@@ -92,30 +88,30 @@ public class HitlQueueControllerTest {
     // ---- GET /api/governance/hitl -----------------------------------------------
 
     @Test
-    void adminCanListPendingApprovals() throws Exception {
+    void adminCanListPendingHitlItems() throws Exception {
         authenticateAs("ops-admin", "ROLE_ADMIN");
-        ProcurementApproval pending = new ProcurementApproval();
-        pending.setId(1);
-        pending.setStatus("PENDING");
-        pending.setWholesalerId("W1");
-        pending.setAmount(new BigDecimal("6000.00"));
-        when(governanceUseCase.getPendingApprovals()).thenReturn(Arrays.asList(pending));
+        HitlItem pending = HitlItem.builder()
+                .id("PA-1").source("B2B_PROCUREMENT").type("b2b_override")
+                .status("PENDING").amount(new BigDecimal("6000.00"))
+                .description("B2B restock override — wholesaler W1").build();
+        when(governanceUseCase.getPendingHitlItems()).thenReturn(List.of(pending));
 
         mockMvc.perform(get("/api/governance/hitl"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.length()").value(1))
-                .andExpect(jsonPath("$[0].id").value(1))
+                .andExpect(jsonPath("$[0].id").value("PA-1"))
+                .andExpect(jsonPath("$[0].source").value("B2B_PROCUREMENT"))
                 .andExpect(jsonPath("$[0].status").value("PENDING"));
     }
 
     @Test
-    void customerCannotListPendingApprovals() throws Exception {
+    void customerCannotListPendingHitlItems() throws Exception {
         authenticateAs("CUST-200", "ROLE_CUSTOMER");
 
         mockMvc.perform(get("/api/governance/hitl"))
                 .andExpect(status().isForbidden());
 
-        verify(governanceUseCase, never()).getPendingApprovals();
+        verify(governanceUseCase, never()).getPendingHitlItems();
     }
 
     // ---- POST /api/governance/hitl/{id}/approve ---------------------------------
@@ -124,28 +120,28 @@ public class HitlQueueControllerTest {
     void adminCanApprove() throws Exception {
         authenticateAs("ops-admin", "ROLE_ADMIN");
 
-        mockMvc.perform(post("/api/governance/hitl/1/approve")
+        mockMvc.perform(post("/api/governance/hitl/PA-1/approve")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(overrideBody("operator123", "High demand")))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.approvalId").value(1))
+                .andExpect(jsonPath("$.id").value("PA-1"))
                 .andExpect(jsonPath("$.status").value("APPROVED"))
-                .andExpect(jsonPath("$.message").value("B2B restock transaction successfully overridden and released."));
+                .andExpect(jsonPath("$.message").value("HITL item approved and released."));
 
-        verify(governanceUseCase).approveOverride(1, "operator123", "High demand");
+        verify(governanceUseCase).resolveHitlItem("PA-1", true, "operator123", "High demand");
     }
 
     @Test
     void customerCannotApprove() throws Exception {
         authenticateAs("CUST-200", "ROLE_CUSTOMER");
 
-        mockMvc.perform(post("/api/governance/hitl/1/approve")
+        mockMvc.perform(post("/api/governance/hitl/PA-1/approve")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(overrideBody("CUST-200", "I want this released")))
                 .andExpect(status().isForbidden());
 
         // The privileged override must never fire for a non-admin principal.
-        verify(governanceUseCase, never()).approveOverride(anyInt(), anyString(), anyString());
+        verify(governanceUseCase, never()).resolveHitlItem(anyString(), anyBoolean(), anyString(), anyString());
     }
 
     // ---- POST /api/governance/hitl/{id}/reject ----------------------------------
@@ -154,40 +150,40 @@ public class HitlQueueControllerTest {
     void adminCanReject() throws Exception {
         authenticateAs("ops-admin", "ROLE_ADMIN");
 
-        mockMvc.perform(post("/api/governance/hitl/1/reject")
+        mockMvc.perform(post("/api/governance/hitl/AQ-HITL-XYZ/reject")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(overrideBody("operator123", "Over budget")))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.approvalId").value(1))
+                .andExpect(jsonPath("$.id").value("AQ-HITL-XYZ"))
                 .andExpect(jsonPath("$.status").value("REJECTED"))
-                .andExpect(jsonPath("$.message").value("B2B restock transaction override rejected. Order canceled."));
+                .andExpect(jsonPath("$.message").value("HITL item rejected."));
 
-        verify(governanceUseCase).rejectOverride(1, "operator123", "Over budget");
+        verify(governanceUseCase).resolveHitlItem("AQ-HITL-XYZ", false, "operator123", "Over budget");
     }
 
     @Test
     void customerCannotReject() throws Exception {
         authenticateAs("CUST-200", "ROLE_CUSTOMER");
 
-        mockMvc.perform(post("/api/governance/hitl/1/reject")
+        mockMvc.perform(post("/api/governance/hitl/PA-1/reject")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(overrideBody("CUST-200", "cancel this")))
                 .andExpect(status().isForbidden());
 
-        verify(governanceUseCase, never()).rejectOverride(anyInt(), anyString(), anyString());
+        verify(governanceUseCase, never()).resolveHitlItem(anyString(), anyBoolean(), anyString(), anyString());
     }
 
-    // ---- Idempotency: a ticket already resolved cannot be re-processed ----------
+    // ---- Idempotency: an item already resolved cannot be re-processed -----------
 
     @Test
     void doubleApproveIsIdempotentConflict() throws Exception {
         authenticateAs("ops-admin", "ROLE_ADMIN");
-        // Second approve of an already-APPROVED ticket: the use-case rejects the
+        // Second approve of an already-resolved item: the use-case rejects the
         // re-process; the controller must surface 409, not silently re-run it.
         doThrow(new TicketAlreadyResolvedException("Ticket is already APPROVED"))
-                .when(governanceUseCase).approveOverride(1, "operator123", "High demand");
+                .when(governanceUseCase).resolveHitlItem("PA-1", true, "operator123", "High demand");
 
-        mockMvc.perform(post("/api/governance/hitl/1/approve")
+        mockMvc.perform(post("/api/governance/hitl/PA-1/approve")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(overrideBody("operator123", "High demand")))
                 .andExpect(status().isConflict());
